--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ test:
 production:
   <<: *default
   adapter: mysql2
-  database: furima_40436_production
+  database: furima-40436_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
